tests/pos/todo/simple/54-hex.ts


var a = 0x00000008;

var b = 0x00000008;

assert(b === (a | a));

