tests/neg/simple/hex.ts




var a = 0x00000008;

var b = 0x00000011;

assert(b === a + a);

